[Feature] Add BINTRAY_USER to fix CI.

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,7 @@ POM_SCM_CONNECTION=scm:git@github.com:zhanghai/AndroidLibraryTemplate.git
 POM_SCM_DEVELOPER_CONNECTION=scm:git@github.com:zhanghai/AndroidLibraryTemplate.git
 POM_SCM_URL=https://github.com/zhanghai/AndroidLibraryTemplate
 
+BINTRAY_USER=zhanghai
 BINTRAY_REPO=AndroidLibraryTemplate
 BINTRAY_ISSUE_TRACKER_URL=https://github.com/zhanghai/AndroidLibraryTemplate/issues
 BINTRAY_VCS_URL=https://github.com/zhanghai/AndroidLibraryTemplate
