--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,9 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+android.enableJetifier=true
+android.useAndroidX=true
+
 GROUP=me.zhanghai.android.librarytemplate
 VERSION=1.0.0
 VERSION_CODE=1
