[Feature] Fix Maven publishing.

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,11 +24,15 @@ android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
+
 GROUP=me.zhanghai.android.librarytemplate
 VERSION_NAME=1.0.0
 VERSION_CODE=1
 
 POM_DESCRIPTION=Android library template
+POM_URL=https://github.com/zhanghai/AndroidLibraryTemplate
 POM_INCEPTION_YEAR=2021
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
@@ -39,4 +43,3 @@ POM_DEVELOPER_URL=https://github.com/zhanghai
 POM_SCM_CONNECTION=scm:git@github.com:zhanghai/AndroidLibraryTemplate.git
 POM_SCM_DEV_CONNECTION=scm:git@github.com:zhanghai/AndroidLibraryTemplate.git
 POM_SCM_URL=https://github.com/zhanghai/AndroidLibraryTemplate
-POM_URL=https://github.com/zhanghai/AndroidLibraryTemplate
